--- a/index.html
+++ b/index.html
@@ -44,7 +44,25 @@
     <!--  -->
     <!-- kamu boleh menambahkan sprite di samping textscreen yang sudah ada @POINPLUS -->
     <!-- di ujung kanan bawah, tambahkan informasi NIM, nama, dan link Github @UTAMA -->
-
-  <div class="kotakatas"><p id="right">right</p></div>  
+<div><p class="nama1">CONTROLLER</p></div>
+    <div class="control">
+        <div class="left">
+          <button class="btn aab">UP</button> 
+          <div class="horiz">
+            <button class="btn aab">LEFT</button> 
+            
+            <button class="btn aab">RIGHT</button>
+          </div>
+          <button class="btn aab">DOWN</button>
+        </div>
+        <div class="right">
+          <button class="btn bbc">B</button>
+          <button class="btn bbc">A</button>
+        </div>
+      </div>  
+      <footer>
+        NPM: 23430206
+        <a href="###" target="_blank">Github</a>
+      </footer>
 </body>
 </html>
