--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>JoyCon</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <!-- buat komponen yang menggambarkan controller @MUTAMA -->
     <!--    [^]                -->
@@ -44,25 +46,28 @@
     <!--  -->
     <!-- kamu boleh menambahkan sprite di samping textscreen yang sudah ada @POINPLUS -->
     <!-- di ujung kanan bawah, tambahkan informasi NIM, nama, dan link Github @UTAMA -->
-<div><p class="nama1">CONTROLLER</p></div>
+    <div>
+        <p class="nama1">CONTROLLER</p>
+    </div>
     <div class="control">
         <div class="left">
-          <button class="btn aab">UP</button> 
-          <div class="horiz">
-            <button class="btn aab">LEFT</button> 
-            
-            <button class="btn aab">RIGHT</button>
-          </div>
-          <button class="btn aab">DOWN</button>
+            <button class="btn aab">UP</button>
+            <div class="horiz">
+                <button class="btn aab">LEFT</button>
+
+                <button class="btn aab">RIGHT</button>
+            </div>
+            <button class="btn aab">DOWN</button>
         </div>
         <div class="right">
-          <button class="btn bbc">B</button>
-          <button class="btn bbc">A</button>
+            <button class="btn bbc">B</button>
+            <button class="btn bbc">A</button>
         </div>
-      </div>  
-      <footer>
+    </div>
+    <footer>
         NPM: 23430206
         <a href="###" target="_blank">Github</a>
-      </footer>
+    </footer>
 </body>
+
 </html>
